--- a/style/styleIndex.css
+++ b/style/styleIndex.css
@@ -4,6 +4,7 @@
 
 body {
     background-image: url("../img/fondo.png");
+    font-family: helvetica;
 }
 
 h1 {
@@ -29,15 +30,15 @@ h1 {
     padding-top: 30px;
 }
 
-#joinSearchChat div {
-    font-family: helvetica;
-    font-size: 2vw;
-    margin-left: 9%;
+#joinSearchChat h2 {
+    font-size: 20px;
+    margin-left: 80px;
 }
 
 #joinSearchChat img {
     width: 200px;
     margin-top: 60px;
+    margin-left: 50px;
 }
 
 #meetings {
@@ -45,26 +46,26 @@ h1 {
     color: #ffffff;
     background-color: #143b7e;
     padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+#meetings h1{
+	margin-bottom: 40px;
 }
 
 #meetings p {
-    display: inline-block;
+    font-size: 15pt;
     text-align: justify;
     margin-top: 50px;
-    width: 500px;
 }
 
-#meetings img {
-    display: inline-block;
-    margin-left: 50px;
-}
 
 #title {
     padding: 10px;
     font-size: 5vw;
     font-family: 'Anton', sans-serif;
     color: #d66736;
-    background-color: rgba(255, 255, 255, 0.65);
+    background-color: rgba(255, 255, 255, 0.85);
 }
 
 .access {
@@ -75,8 +76,13 @@ h1 {
     min-height: 700px;
 }
 
+.access h2{
+	margin-bottom:30px;
+	padding-bottom:5px;
+}
+
 .accessForm {
-    background-color: rgba(255, 255, 255, 0.65);
+    background-color: rgba(255, 255, 255, 0.85);
     min-height: 300px;
 }
 
@@ -88,13 +94,12 @@ h1 {
     margin-top: 450px;
 }
 
-.team img {
-    padding: 30px 40px 0 40px;
+#team img{
+	margin-top: 40px;
+	margin-left: auto;
+	margin-right:auto;
 }
 
-.team div {
-    display: inline-block;
-}
 
 #contact {
     min-height: 500px;
@@ -104,8 +109,8 @@ h1 {
     margin-top: 450px;
 }
 
-.contact {
-    padding-top: 30px;
+#contact h1 {
+    margin-bottom: 30px;
 }
 
 
